[package]
name = "randlines"
version = "0.1.1"
authors = ["Martin Czygan <martin.czygan@gmail.com>"]
edition = "2018"
description = "Similar to shuf(1), but probabilistic and minimalistic with respect to memory"
readme = "README.md"
homepage = "https://github.com/miku/randlines"
license = "MIT"
keywords = ["random", "sampling"]
categories = ["command-line-utilities"]

[dependencies]

rand = "0.7.3"
