[package]
name = "randlines"
version = "0.1.3"
authors = ["Martin Czygan <martin.czygan@gmail.com>"]
edition = "2018"
description = "Similar to shuf(1), but probabilistic and minimalistic with respect to memory"
readme = "README.md"
homepage = "https://github.com/miku/randlines"
license = "MIT"
keywords = ["random", "sampling"]
categories = ["command-line-utilities"]

[dependencies]

rand = { version = "0.7" }
structopt = { version = "0.3"  }
tempfile = { version = "3.1.0" }
